# ACADO_NMPC_ROS

./: CMakeLists.txt  README.md  package.xml
acado_mpc/: CMakeLists.txt
acado_mpc/acado_export_code/: CMakeLists.txt  symbolic_mpc.cpp
acado_mpc/launch/: tracking_env.launch
acado_mpc/rviz/: acado.rviz
acado_mpc/script/: plot_control_input.py
acado_mpc/src/: mpc_node.cpp  odom_publisher.cpp  trajectory_publisher.cpp
include/: mpc.h
launch/: set_weight.launch  tracking_env.launch
rviz/: acado.rviz
src/: gt_publisher.cpp  mpc_gt_node.cpp  mpc_node.cpp  trajectory_publisher.cpp
